# medical_fl_pidl

./: .gitignore  README.md  context.md  pyproject.toml  requirements.txt
configs/: dataset_configs.py  experiment_config.py
data/: dataset_utils.py  kaggle_loader.py  partitioning.py
explainability/: __init__.py  gradcam.py  plot_utils.py  pm_grid_explainer.py
federated/: client_app.py  server_app.py  strategy_logging.py  task.py
losses/: pidl_loss.py
metrics/: calibration_metrics.py  classification_metrics.py
models/: resnet_pidl.py
notebooks/: 01_clean_multidataset_experiments.ipynb  02_result_analysis_and_plots.ipynb  03_robustness_experiments_optional.ipynb  04_ablation_study.ipynb  05_explainability_analysis.ipynb  06_non_iid_dirichlet_brain_tumor.ipynb
results/brain_tumor_mri/3_clients/: config.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results/brain_tumor_mri/4_clients/: config.json  dataset_summary.json  fl_rounds.csv  fl_summary (1).json  per_class_metrics.csv  round_metrics.jsonl
results/brain_tumor_mri/5_clients/: config.json  dataset_summary.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results/colon_cancer_or_pathology/3_clients/: fl_rounds.csv  fl_summary (1).json  per_class_metrics.csv  round_metrics.jsonl
results/colon_cancer_or_pathology/4_clients/: config.json  dataset_summary.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results/colon_cancer_or_pathology/5_clients/: config.json  dataset_summary.json  fl_rounds.csv  fl_summary (1).json  per_class_metrics.csv  round_metrics.jsonl
results/covid/3_clients/: config.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results/covid/4_clients/: config.json  dataset_summary.json  fl_rounds.csv  fl_summary (1).json  per_class_metrics.csv  round_metrics.jsonl
results/covid/5_clients/: config.json  dataset_summary.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/: ablation_summary.csv  group1_pidl_type.csv  group2_grid_size.csv  group3_lambda.csv
results_ablation/brain_tumor_mri/global_pidl/: ablation_summary.json  config.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/brain_tumor_mri/gridwise_2x2_lam0.10/: ablation_summary.json  config.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/brain_tumor_mri/gridwise_4x4_lam0.01/: ablation_summary.json  config.json  dataset_summary.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/brain_tumor_mri/gridwise_4x4_lam0.10/: ablation_summary.json  fl_rounds.csv  per_class_metrics.csv  round_metrics.jsonl
results_ablation/brain_tumor_mri/gridwise_4x4_lam0.50/: ablation_summary.json  config.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/brain_tumor_mri/gridwise_8x8_lam0.10/: ablation_summary.json  config.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/brain_tumor_mri/no_pidl/: ablation_summary.json  config.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/colon_cancer_or_pathology/global_pidl/: ablation_summary.json  config.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/colon_cancer_or_pathology/gridwise_2x2_lam0.10/: ablation_summary.json  config.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/colon_cancer_or_pathology/gridwise_4x4_lam0.01/: ablation_summary.json  config.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/colon_cancer_or_pathology/gridwise_4x4_lam0.10/: ablation_summary.json  config.json  fl_rounds.csv  round_metrics.jsonl
results_ablation/colon_cancer_or_pathology/gridwise_4x4_lam0.50/: ablation_summary.json  config.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/colon_cancer_or_pathology/gridwise_8x8_lam0.10/: ablation_summary.json  config.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/colon_cancer_or_pathology/no_pidl/: ablation_summary.json  config.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/covid/global_pidl/: ablation_summary.json  config.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/covid/gridwise_2x2_lam0.10/: ablation_summary.json  config.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/covid/gridwise_4x4_lam0.01/: ablation_summary.json  config.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/covid/gridwise_4x4_lam0.10/: ablation_summary.json  fl_rounds.csv  per_class_metrics.csv  round_metrics.jsonl
results_ablation/covid/gridwise_4x4_lam0.50/: ablation_summary.json  config.json  dataset_summary.json  fl_clients.csv  fl_eval.json  fl_rounds.csv  fl_summary.json  per_class_metrics.csv  round_metrics.jsonl
results_ablation/covid/gridwise_8x8_lam0.10/: ablation_summary.json  config.json  fl_clients.csv  (+5 more)
results_explainability/: explainability_master_summary.csv
results_robustness/: robustness_comparison.csv
robustness/: __init__.py  attacks.py  defenses.py  robustness_config.py
utils/: logging_utils.py  path_utils.py  seed_utils.py
(+84 files in other folders)
